--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <link rel="shortcut icon" sizes="48x48" href="/public/logo-48.png">
-    <meta name="theme-color" content="#f60">
+    <meta name="theme-color" content="#26272B">
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
